# dovecot-xaps-plugin

./: .gitignore  CMakeLists.txt  Makefile  README.md  imap-xaps-plugin.c  imap-xaps-plugin.h  push-notification-xaps-plugin.c  push-notification-xaps-plugin.h  xaps-daemon.c  xaps-daemon.h  xaps-imap-plugin.c  xaps-imap-plugin.h  xaps-plugin.c  xaps-plugin.h  xaps-push-notification-plugin.c  xaps-push-notification-plugin.h  xaps.c  xaps.conf  xaps.h
